# prod-finals

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  AGENTS.md  Makefile  README.md  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  project.code-workspace
backend/: .env.example  Dockerfile  entry.sh  fly.toml  pyproject.toml  pytest.ini
backend/src/: main.py
backend/src/api/: __init__.py
backend/src/api/v1/: __init__.py
backend/src/core/: config.py  crypto.py  error_handling.py  errors.py  rate_limit.py  rbac.py  security.py
backend/src/core/http/: __init__.py  cookies.py
backend/src/core/middlewares/: __init__.py  request_tracing.py
backend/src/database/redis/: __init__.py  cache_interface.py  redis_client.py
backend/src/database/relational_db/: __init__.py  session.py  unit_of_work.py
backend/src/migrations/: 8e7a1c4d2f90_backfill_mock_identity_for_existing_users.py  env.py
backend/src/scheduler/: __init__.py
backend/src/scripts/: __init__.py  find_closest_qdrant_pair.py  seed_mock_users.py  sync_ml_profiles.py
backend/src/service/: avatar_assets.py  demo_accounts.py  dev_seed.py  mixins.py
backend/src/webhooks/: __init__.py
backend/tests/: __init__.py  conftest.py
backend/tests/helpers/: __init__.py  headers.py
backend/tests/integration/: test_auth_api.py  test_avatar_api.py  test_dating_api.py  test_error_format.py  test_health_api.py
backend/tests/unit/: test_feed_preview_refresh.py  test_mock_identity_registry.py  test_mock_ml_facade.py  test_random_mix.py  test_sync_ml_profiles.py  test_token_service.py  test_user_service_avatar.py
ml/: Dockerfile  EDA.md  README.md  __init__.py  config.py  entry.sh  fly.toml  main.py  model.py  pyproject.toml  qdrant.py
ml/learn/: __init__.py  model.py  pipeline.py  prepare_data.py
ml/qdrant_storage/: raft_state.json
ml/scripts/: __init__.py  train_model.py
ml/service/: __init__.py  auth.py  runtime.py  schemas.py
ml/tests/: test_api_contract.py
(+480 files in other folders)
