[project]
name = "ml-service"
version = "0.1.0"
description = "Internal ML service for ranking, explanations and feedback ingestion."
authors = [{ name = "Team 26" }]
requires-python = ">=3.13,<4"
dependencies = [
  "fastapi (>=0.135.1,<0.136.0)",
    "uvicorn[standard] (>=0.41.0,<0.42.0)",
    "pydantic (>=2.13.1,<3.0.0)",
    "boto3 (>=1.40.0,<2.0.0)"
    "pandas (>=2.2.0)",
    "catboost (>=1.2.0)",
    "scikit-learn (>=1.5.0)",
    "qdrant-client (>=1.12.0)
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[dependency-groups]
dev = [
    "httpx (>=0.28.1,<0.29.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "ruff (>=0.14.1,<0.15.0)"
]
